# link-shortener

./: .gitattributes  .gitignore  Cargo.toml  deno.json  devenv.nix  devenv.yaml  flake.nix  osv-scanner.toml  result  secretspec.toml
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs  links.rs  prelude.rs
crates/link-shortener/: Cargo.toml
crates/link-shortener-api/: Cargo.toml
crates/link-shortener-api/src/: auth.rs  error.rs  lib.rs  links.rs  redirect.rs
crates/link-shortener-store/: Cargo.toml
crates/link-shortener-store/src/: error.rs  lib.rs  links.rs
crates/link-shortener-store/tests/: conflict.rs
crates/link-shortener/src/: main.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260330_152532_create_links.rs  m20260624_120000_add_owner_name.rs
sites/docs/: book.toml
sites/docs/src/: SUMMARY.md  architecture.md  deployment.md  intro.md  setup.md
sites/web/: .oxlintrc.json  deno.json  package.json  svelte.config.js  vite.config.ts
sites/web/src/: App.svelte  app.html  main.ts
sites/web/src/lib/api/: client.ts  schema.d.ts
sites/web/src/lib/components/: CreateLink.svelte  LinkList.svelte
sites/web/src/routes/: +layout.ts  +page.svelte
