[package]
name = "entity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sea-orm = { version = "1.1.19", features = ["with-uuid", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }

# machete does not detect the spaced `utoipa :: ToSchema` emitted by sea-orm-cli
[package.metadata.cargo-machete]
ignored = ["utoipa"]
