[package]
name = "link-shortener-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
entity = { version = "0.1.0", path = "../entity" }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
thiserror = "2.0.18"
uuid = { version = "1.23.0", features = ["v7", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
