[package]
name = "link-shortener"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dotenvy = "0.15.7"
link-shortener-api = { version = "0.1.0", path = "../link-shortener-api" }
link-shortener-store = { version = "0.1.0", path = "../link-shortener-store" }
migration = { version = "0.1.0", path = "../migration" }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sea-orm-migration = "1.1.19"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
