[package]
name = "migration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
